k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jbook-back-svc
spec:
  selector:
    app: jbook-back
  ports:
    - protocol: "TCP"
      port: 8000
      targetPort: 8000
  type: LoadBalancer
