k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jbook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: jbook-back-svc
            port:
              number: 8000
      - path: /docs
        pathType: Exact
        backend:
          service:
            name: jbook-back-svc
            port:
              number: 8000
